clusters/apps/homepage/overlays/cloud-web/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: web
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`calcifer.tech`)
      kind: Rule
      middlewares:
        - name: homepage-security-headers
      services:
        - name: homepage
          port: 3000
  tls:
    secretName: homepage-tls
